added blog html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <section class="bg-yellow-50">
         <div class="navbar max-w-screen-xl mx-auto  ">
           <div class="navbar-start">
-                  <button class="btn btn-sm"style="background-color: #B4F461">Blog</button>
+                  <a href="blog.html"><button class="btn btn-sm"style="background-color: #B4F461">Blog</button></a>
               </div>
           <div class="navbar-center gap-2">
                 <img class="w-7" src="assets/logo.png" alt="">
