pixed some issues

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
  <section id="cards" class="mt-1 space-y-8">
 
 <!-- first card -->
-  <div class="shadow-md border border-slate-300 p-7 rounded-2xl w-4/5 mx-auto">
+  <div class="shadow-md border border-slate-300 lg:p-7 p-2  rounded-2xl w-4/5 mx-auto">
     <div class="flex flex-col lg:flex-row gap-10 items-center">
-      <div class="w-2/5 ">
+      <div class="lg:w-2/5 w-4/5 mt-4">
       <img
         src="assets/noakhali.png"
         class=" rounded-lg object-cover  w-full h-full" />
       </div>
 
 
-     <div class="w-3/5">
+     <div class="lg:w-3/5 w-4/5">
       <div>
         <button class="flex btn h-6 ">
           <img class="w-6" src="assets/coin.png" alt="">
@@ -96,16 +96,16 @@
     </div>
   </div>
 <!-- second card -->
-  <div class="shadow-md border border-slate-300 p-7 rounded-2xl w-4/5 mx-auto">
+  <div class="shadow-md border border-slate-300 lg:p-7 p-2 rounded-2xl w-4/5 mx-auto">
     <div class="flex flex-col lg:flex-row gap-10 items-center">
-      <div class="w-2/5 ">
+      <div class="lg:w-2/5 w-4/5 mt-4 ">
       <img
         src="assets/Our journer with relief to Lokkhipur.jpg"
         class=" rounded-lg object-cover  w-full h-full" />
       </div>
 
 
-     <div class="w-3/5">
+     <div class="lg:w-3/5 w-4/5">
       <div>
         <button class="flex btn h-6 ">
           <img class="w-6" src="assets/coin.png" alt="">
@@ -140,16 +140,16 @@
     </div>
   </div>
 <!-- third card -->
-  <div class="shadow-md border border-slate-300 p-7 rounded-2xl w-4/5 mx-auto">
+  <div class="shadow-md border border-slate-300 lg:p-7 p-2 rounded-2xl w-4/5 mx-auto">
     <div class="flex flex-col lg:flex-row gap-10 items-center">
-      <div class="w-2/5 ">
+      <div class="lg:w-2/5 w-4/5 mt-4 ">
       <img
         src="assets/Abu Bakar.jpg"
         class=" rounded-lg object-cover  w-full h-full" />
       </div>
 
 
-     <div class="w-3/5">
+     <div class="lg:w-3/5 w-4/5">
       <div>
         <button class="flex btn h-6 ">
           <img class="w-6" src="assets/coin.png" alt="">
